erDiagram
  RESTAURANT ||--o{ COMIC : "contains"
  COMIC ||--|| LEADERBOARD_ENTRY : "projects_to"
  RESTAURANT ||--o{ REVIEW_SOURCE : "sourced_from"
  COMIC ||--o{ TAKEDOWN_REQUEST : "may_have"

  RESTAURANT {
    string RestaurantId PK
    string PlaceId
    string Name
    string Address
    float Latitude
    float Longitude
    string CurrentStatusEnum
    string AllowedCurrentStatusTransitions
    datetime LastUpdatedUtc
  }

  REVIEW_SOURCE {
    string ReviewSourceId PK
    string RestaurantId FK
    string ReviewerAlias
    string ReviewText
    int OriginalRating
    datetime CapturedUtc
    string IngestionStatusEnum
    string AllowedIngestionStatusTransitions
  }

  COMIC {
    string ComicId PK
    string RestaurantId FK
    string BlobPath
    string Narrative
    int StrangenessScore
    string GenerationStatusEnum
    string AllowedGenerationStatusTransitions
    datetime CreatedUtc
    datetime ExpiresUtc
  }

  LEADERBOARD_ENTRY {
    string LeaderboardEntryId PK
    string ComicId FK
    string RestaurantName
    int Rank
    int Score
    datetime PublishedUtc
    string ProjectionStatusEnum
    string AllowedProjectionStatusTransitions
  }

  TAKEDOWN_REQUEST {
    string TakedownRequestId PK
    string ComicId FK
    string RequestedBy
    string Reason
    string RequestStatusEnum
    string AllowedRequestStatusTransitions
    datetime RequestedUtc
    datetime ProcessedUtc
  }
